<resources>
    <string name="app_name">Task App</string>
    <string name="action_settings">Settings</string>

    <string name="task_name_label">Task Name Label</string>
    <string name="placeholder_date">Wed Jun 28</string>
    <string name="task_name">Task Name</string>
    <string name="due">Due</string>
    <string name="email">Email</string>
    <string name="set_a_reminder">set a reminder</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="enter_date">You need to enter date</string>
    <string name="logTag">Frank</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_task">Add new task</string>
    <string name="Confirm">Confirm</string>
    <string name="are_u_sure">Are you sure you want to delete ?</string>
    <string name="Yes">Yes !</string>
    <string name="No">No !</string>
    <string name="summary">If you want to add task to your calendar</string>
    <string name="title">Enable add to calendar</string>
    <string name="share">If you want to share task with others</string>
    <string name="share_email">Enable share by email</string>
    <string name="share_key">enable_share_task</string>
    <string name="cal_key">enable_addTo_calendar</string>
</resources>
